k8s/postman-insights-daemonset.yaml
# Create namespace
apiVersion: v1
kind: Namespace
metadata:
  name: postman-insights-namespace
---
# Create daemonset for running agent
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: postman-insights-agent
  namespace: postman-insights-namespace
spec:
  selector:
    matchLabels:
      name: postman-insights-agent
  template:
    metadata:
      labels:
        name: postman-insights-agent
    spec:
      serviceAccountName: postman-insights-service-account
      automountServiceAccountToken: true
      containers:
      - args:
        - kube
        - run
        - --repro-mode
        image: public.ecr.aws/postman/postman-insights-agent:latest
        imagePullPolicy: Always
        name: postman-insights-agent
        resources:
          requests:
            cpu: 200m
            memory: 500Mi
          limits:
            cpu: 200m
            memory: 500Mi
        securityContext:
          capabilities:
            add:
              - NET_RAW
              - SYS_ADMIN
              - SYS_PTRACE
            drop:
              - ALL
        volumeMounts:
        - mountPath: /host/proc
          name: host-procfs
          readOnly: true
        - mountPath: /host/var/run/netns
          mountPropagation: HostToContainer
          name: host-netns
          readOnly: true
        - mountPath: /var/run/containerd/containerd.sock
          name: containerdsocket
          readOnly: true
      restartPolicy: Always
      volumes:
      - name: host-procfs
        hostPath:
          path: /proc
          type: Directory    
      - name: host-netns
        hostPath:
          path: /var/run/netns
          type: Directory    
      - name: containerdsocket
        hostPath:
          path: /var/run/containerd/containerd.sock
          type: Socket
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 30%
